# cmake-imported-project

./: .travis.yml  CMakeLists.txt  DICTIONARY  ImportedProjectUtils.cmake  README.md  appveyor.yml  biicode.conf  conanfile.py
test/: .travis.yml  AppendCacheDefinition.cmake  AppendTypedCacheDefinition.cmake  AssignOnePairInPairList.cmake  AssignTwoPairsInPairList.cmake  AssignZeroPairsInPairList.cmake  CMakeLists.txt  CreateExternalProjectHelper.cmake  ErrorOnUnevenPairs.cmake  ErrorOnUnevenPairsVerify.cmake  ForwardCacheNamespaces.cmake  ForwardNamespacesToImportedExternalProject.cmake  ForwardNamespacesToImportedExternalProjectVerify.cmake  GetLibraryLocationForLibraryPath.cmake  GetLibraryLocationForLibraryTarget.cmake  ImportIncludeDirFromExternalProject.cmake  ImportIncludeDirFromExternalProjectVerify.cmake  ImportLibraryCreatesImportedTarget.cmake  ImportLibraryFromExtProjectGeneratesFromExtProject.cmake  ImportLibraryFromExtProjectGeneratesFromExtProjectVerify.cmake  ImportLibraryFromImportedExternalProject.cmake  ImportLibraryFromImportedExternalProjectGenerateExports.cmake  ImportLibraryFromImportedExternalProjectGenerateExportsVerify.cmake  ImportLibraryFromImportedExternalProjectVerify.cmake  ImportLibraryLocationFromImportedExternalProject.cmake  ImportLibrarySetsVariableLocationSuffix.cmake  ImportedExternalProjectRunsConfigureStep.cmake  ImportedExternalProjectRunsConfigureStepVerify.cmake  ImportedExternalProjectRunsDownloadStep.cmake  ImportedExternalProjectRunsDownloadStepVerify.cmake  ImportedTargetDependsOnExtProject.cmake  ImportedTargetDependsOnExtProjectVerify.cmake  ReturnsListOfVars.cmake
